--- a/images/package.json
+++ b/images/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "axios": "^0.18.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
